<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:showDividers="middle"
    android:adjustViewBounds="true"
    android:divider="@drawable/separator"
    android:orientation="horizontal"
    android:gravity="center">

    <Button
        android:id="@+id/loginButtonGitHub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/auth_github" />

    <Button
        android:id="@+id/loginButtonGoogle"
        android:layout_width="@dimen/auth_btn_width"
        android:layout_height="@dimen/auth_btn_height"
        android:layout_gravity="center"
        android:background="@drawable/g_auth"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButtonGitHub" />


    <Button
        android:id="@+id/loginButtonPhone"
        android:layout_width="@dimen/auth_btn_width"
        android:layout_height="@dimen/auth_btn_height"
        android:layout_gravity="center"
        android:background="@drawable/p_auth"
        android:contentDescription="@string/add_participant"
        app:layout_constraintTop_toBottomOf="@id/loginButtonGoogle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
        android:id="@+id/loginProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/loginButtonGitHub"
        app:layout_constraintBottom_toBottomOf="@id/loginButtonGitHub"
        app:layout_constraintStart_toStartOf="@id/loginButtonGitHub"
        app:layout_constraintEnd_toEndOf="@id/loginButtonGitHub"  />

</LinearLayout>